Use Java 17 functionallities and improve code quality (#121)
* instanceof changes

Signed-off-by: Nicolas Rol <nicolas.rol@rte-france.com>

* enhanced switch changes

Signed-off-by: Nicolas Rol <nicolas.rol@rte-france.com>

* enhanced switch changes

Signed-off-by: Nicolas Rol <nicolas.rol@rte-france.com>

* code quality distributionkey

Signed-off-by: Nicolas Rol <nicolas.rol@rte-france.com>

* code quality

Signed-off-by: Nicolas Rol <nicolas.rol@rte-france.com>

* code quality MetrixOutputData

Signed-off-by: Nicolas Rol <nicolas.rol@rte-france.com>

* code quality MetrixOutputData

Signed-off-by: Nicolas Rol <nicolas.rol@rte-france.com>

* variables made final in CsvResultListener

Signed-off-by: Nicolas Rol <nicolas.rol@rte-france.com>

* delete useless bracket

Signed-off-by: Nicolas Rol <nicolas.rol@rte-france.com>

* code cleaning

Signed-off-by: Nicolas Rol <nicolas.rol@rte-france.com>

* ImmutableMap back

Signed-off-by: Nicolas Rol <nicolas.rol@rte-france.com>

* code quality metrix-integration

Signed-off-by: Nicolas Rol <nicolas.rol@rte-france.com>

* code quality

Signed-off-by: Nicolas Rol <nicolas.rol@rte-france.com>

* code quality

Signed-off-by: Nicolas Rol <nicolas.rol@rte-france.com>

* code quality metrix-mapping

Signed-off-by: Nicolas Rol <nicolas.rol@rte-france.com>

* code quality metrix-tools

Signed-off-by: Nicolas Rol <nicolas.rol@rte-france.com>

* add static strings for redundant strings

Signed-off-by: Nicolas Rol <nicolas.rol@rte-france.com>

* reduce method complexity

Signed-off-by: Nicolas Rol <nicolas.rol@rte-france.com>

* refacto methods to reduce complexity

Signed-off-by: Nicolas Rol <nicolas.rol@rte-france.com>

* delete error not thrown

Signed-off-by: Nicolas Rol <nicolas.rol@rte-france.com>

* add static strings

Signed-off-by: Nicolas Rol <nicolas.rol@rte-france.com>

* Mapping tool coverage

Signed-off-by: Nicolas Rol <nicolas.rol@rte-