@@ -8,7 +8,6 @@
 
 package com.powsybl.metrix.integration.dataGenerator;
 
-import com.google.common.collect.ImmutableMap;
 import com.powsybl.commons.PowsyblException;
 import com.powsybl.timeseries.*;
 import org.slf4j.Logger;
@@ -49,8 +48,12 @@ public class MetrixOutputData {
     public static final String PST_CUR_TAP_NAME = "PST_CUR_TAP_";
     public static final String HVDC_TYPE = "hvdc";
     public static final String PST_TYPE = "pst";
+    public static final String GEN_TYPE = "generator-type";
+    public static final String GENERATOR = "generator";
+    public static final String BRANCH = "branch";
     public static final String CONTINGENCY_TYPE = "contingency";
     public static final String BASECASE_TYPE = "basecase";
+    private static final String UNKNOWN_OUTAGE = "Unknown outage";
 
     private static final String INCIDENT = "INCIDENT";
     private static final String PAR_LIGNE = "PAR LIGNE";
@@ -137,7 +140,7 @@ public class MetrixOutputData {
     private StringResultChunk getStringTimeSeries(String prefix, String type, String id) {
         String name = prefix + id;
         return stringTimeSeries.computeIfAbsent(name, k -> {
-            Map<String, String> tags = ImmutableMap.of(type, id);
+            Map<String, String> tags = Map.of(type, id);
             return new StringResultChunk(length, tags);
         });
     }
@@ -149,7 +152,7 @@ public class MetrixOutputData {
     private DoubleResultChunk getDoubleTimeSeries(String prefix, String id) {
         String name = prefix + id;
         return doubleTimeSeries.computeIfAbsent(name, k -> {
-            Map<String, String> tags = ImmutableMap.of("branch", id);
+            Map<String, String> tags = Map.of(BRANCH, id);
             return new DoubleResultChunk(length, tags);
         });
     }
@@ -162,7 +165,7 @@ public class MetrixOutputData {
         Optional<String> optOutage = Optional.ofNullable(outage);
         String name = prefix + id + optOutage.map(s -> "_" + s).orElse(EMPTY_STRING);
         return doubleTimeSeries.computeIfAbsent(name, k -> {
-            Map<String, String> tags = ImmutableMap.of(type, id, CONTINGENCY_TYPE, optOutage.orElse(BASECASE_TYPE));
+            Map<String, String> tags = Map.of(type, id, CONTINGENCY_TYPE, optOutage.orElse(BASECASE_TYPE));
             return new DoubleResultChunk(length, tags);
         });
     }
@@ -171,7 +174,7 @@ public class MetrixOutputData {
         Optional<String> optOutage = Optional.ofNullable(outage);
         String name = prefix + id + optOutage.map(s -> "_" + s).orElse(EMPTY_STRING) + "_" + element;
         return doubleTimeSeries.computeIfAbsent(name, k -> {
-            Map<String, String> tags = ImmutableMap.of("branch", id,
+            Map<String, String> tags = Map.of(BRANCH, id,
                     "action", element,
                         CONTINGENCY_TYPE, optOutage.orElse(BASECASE_TYPE));
             return new DoubleResultChunk(length, tags);
@@ -205,30 +208,29 @@ public class MetrixOutputData {
         while ((line = reader.readLine()) != null) {
             empty = false;
             chunks = line.split(";", -1);
+            int outageId;
             switch (chunks[0]) {
-                case "C1 ":
+                case "C1 " -> {
                     if ("COMPTE RENDU".equals(chunks[1])) {
                         continue; // header
                     }
                     ts = getDoubleTimeSeries(ERROR_CODE_NAME);
                     ts.insertResult(varNum - offset, Double.parseDouble(chunks[2]));
-                    break;
-
-                case "C2 ":
+                }
+                case "C2 " -> {
                     if ("NON CONNEXITE".equals(chunks[1])) {
                         continue; // header
                     }
                     if (!EMPTY_STRING.equals(chunks[4])) {
-                        ts = getDoubleTimeSeries("LOST_GEN_", "generator", chunks[2]);
+                        ts = getDoubleTimeSeries("LOST_GEN_", GENERATOR, chunks[2]);
                         ts.insertResult(varNum - offset, Double.parseDouble(chunks[4]));
                     }
                     if (!EMPTY_STRING.equals(chunks[5])) {
                         ts = getDoubleTimeSeries("LOST_LOAD_", "load", chunks[2]);
                         ts.insertResult(varNum - offset, Double.parseDouble(chunks[5]));
                     }
-                    break;
-
-                case "C2B ":
+                }
+                case "C2B " -> {
                     if ("NON CONNEXITE".equals(chunks[1])) {
                         continue; // header
                     }
@@ -236,24 +238,24 @@ public class MetrixOutputData {
                         ts = getDoubleTimeSeries("LOST_LOAD_", "load", chunks[3], chunks[2]);
                         ts.insertResult(varNum - offset, Double.parseDouble(chunks[4]));
                     }
-                    break;
-
-                case "C4 ": // outage ids
+                }
+                case "C4 " -> {
+                    // outage ids
                     if ("INCIDENTS".equals(chunks[1])) {
                         continue; // header
                     }
                     outageNames.put(Integer.parseInt(chunks[2].trim()), chunks[4]);
-                    break;
-
-                case "C5 ": // initial balancing for synchronous areas
+                }
+                case "C5 " -> {
+                    // initial balancing for synchronous areas
                     if ("ZONE SYNC".equals(chunks[1])) {
                         continue; // header
                     }
                     ts = getDoubleTimeSeries("INIT_BAL_AREA_" + chunks[2]);
                     ts.insertResult(varNum - offset, Double.parseDouble(chunks[3]));
-                    break;
-
-                case "R1 ": // Preventive load shedding
+                }
+                case "R1 " -> {
+                    // Preventive load shedding
                     if ("PAR CONSO".equals(chunks[1])) {
                         continue; // header
                     }
@@ -265,71 +267,71 @@ public class MetrixOutputData {
                         ts = getDoubleTimeSeries("LOAD_", "load", chunks[2]);
                         ts.insertResult(varNum - offset, Double.parseDouble(chunks[5]));
                     }
-                    break;
-
-                case "R1B ": // Curative Loads
+                }
+                case "R1B " -> {
+                    // Curative Loads
                     if (INCIDENT.equals(chunks[1])) {
                         continue; // header
                     }
-                    outageName = Optional.ofNullable(outageNames.get(Integer.parseInt(chunks[1]))).orElseThrow(() -> new PowsyblException("Unknown outage"));
+                    outageName = Optional.ofNullable(outageNames.get(Integer.parseInt(chunks[1]))).orElseThrow(() -> new PowsyblException(UNKNOWN_OUTAGE));
                     ts = getDoubleTimeSeries("LOAD_CUR_", "load", chunks[2], outageName);
                     ts.insertResult(varNum - offset, Double.parseDouble(chunks[3]));
-                    break;
-
-                case "R1C ": // Loads bindings
+                }
+                case "R1C " -> {
+                    // Loads bindings
                     if ("NOM REGROUPEMENT".equals(chunks[1])) {
                         continue; // header
                     }
                     ts = getDoubleTimeSeries("LOAD_", "load binding", chunks[1]);
                     ts.insertResult(varNum - offset, Double.parseDouble(chunks[2]));
-                    break;
-
-                case "R2 ": // Preventive redispatching
+                }
+                case "R2 " -> {
+                    // Preventive redispatching
                     if ("PAR GROUPE".equals(chunks[1])) {
                         continue; // header
                     }
                     if (!EMPTY_STRING.equals(chunks[5])) {
-                        ts = getDoubleTimeSeries("INIT_BAL_GEN_", "generator", chunks[2]);
+                        ts = getDoubleTimeSeries("INIT_BAL_GEN_", GENERATOR, chunks[2]);
                         ts.insertResult(varNum - offset, Double.parseDouble(chunks[5]));
                     }
                     if (!EMPTY_STRING.equals(chunks[6])) {
-                        ts = getDoubleTimeSeries("GEN_", "generator", chunks[2]);
+                        ts = getDoubleTimeSeries("GEN_", GENERATOR, chunks[2]);
                         ts.insertResult(varNum - offset, Double.parseDouble(chunks[6]));
                     }
-                    break;
-
-                case "R2B ": // Generator Curative
+                }
+                case "R2B " -> {
+                    // Generator Curative
                     if (INCIDENT.equals(chunks[1])) {
                         continue; // header
                     }
-                    outageName = Optional.ofNullable(outageNames.get(Integer.parseInt(chunks[1]))).orElseThrow(() -> new PowsyblException("Unknown outage"));
-                    ts = getDoubleTimeSeries("GEN_CUR_", "generator", chunks[2], outageName);
+                    outageName = Optional.ofNullable(outageNames.get(Integer.parseInt(chunks[1]))).orElseThrow(() -> new PowsyblException(UNKNOWN_OUTAGE));
+                    ts = getDoubleTimeSeries("GEN_CUR_", GENERATOR, chunks[2], outageName);
                     ts.insertResult(varNum - offset, Double.parseDouble(chunks[3]));
-                    break;
-
-                case "R2C ": // Generators bindings
+                }
+                case "R2C " -> {
+                    // Generators bindings
                     if ("NOM REGROUPEMENT".equals(chunks[1])) {
                         continue; // header
                     }
                     ts = getDoubleTimeSeries("GEN_", "generator binding", chunks[1]);
                     ts.insertResult(varNum - offset, Double.parseDouble(chunks[2]));
-                    break;
-
-                case "R3 ": // Basecase flows
+                }
+                case "R3 " -> {
+                    // Basecase flows
                     if (PAR_LIGNE.equals(chunks[1])) {
                         continue; // header
                     }
-                    ts = getDoubleTimeSeries(FLOW_NAME, "branch", chunks[2]);
+                    ts = getDoubleTimeSeries(FLOW_NAME, BRANCH, chunks[2]);
                     ts.insertResult(varNum - offset, Double.parseDouble(chunks[3]));
-                    break;
-
-                case "R3B ": // max outage flows
+                }
+                case "R3B " -> {
+                    // max outage flows
                     if (PAR_LIGNE.equals(chunks[1])) {
                         continue; // header
                     }
                     if (!EMPTY_STRING.equals(chunks[3])) {
-                        sts = getStringTimeSeries("MAX_TMP_THREAT_NAME_", "branch", chunks[2]);
-                        outageName = Optional.ofNullable(outageNames.get(Integer.parseInt(chunks[3]))).orElseThrow(() -> new PowsyblException("Unknown outage"));
+                        sts = getStringTimeSeries("MAX_TMP_THREAT_NAME_", BRANCH, chunks[2]);
+                        outageName = Optional.ofNullable(outageNames.get(Integer.parseInt(chunks[3]))).orElseThrow(() -> new PowsyblException(UNKNOWN_OUTAGE));
                         sts.insertResult(varNum - offset, outageName);
 
                         ts = getDoubleTimeSeries(MAX_TMP_THREAT_FLOW, chunks[2]);
@@ -338,53 +340,53 @@ public class MetrixOutputData {
                     int i = 0;
                     int chunkNum;
                     while ((chunkNum = 5 + 2 * i) < chunks.length &&
-                            !EMPTY_STRING.equals(chunks[chunkNum])) {
+                        !EMPTY_STRING.equals(chunks[chunkNum])) {
                         i++;
-                        sts = getStringTimeSeries(MAX_THREAT_NAME + i + "_NAME_", "branch", chunks[2]);
+                        sts = getStringTimeSeries(MAX_THREAT_NAME + i + "_NAME_", BRANCH, chunks[2]);
                         sts.insertResult(varNum - offset, outageNames.get(Integer.parseInt(chunks[chunkNum])));
 
                         ts = getDoubleTimeSeries(MAX_THREAT_NAME + i + "_" + FLOW_NAME, chunks[2]);
                         ts.insertResult(varNum - offset, Double.parseDouble(chunks[chunkNum + 1]));
                     }
-                    break;
-
-                case "R3C ": // Detailed outage flows
+                }
+                case "R3C " -> {
+                    // Detailed outage flows
                     if (PAR_LIGNE.equals(chunks[1])) {
                         continue; // header
                     }
-                    outageName = Optional.ofNullable(outageNames.get(Integer.parseInt(chunks[3]))).orElseThrow(() -> new PowsyblException("Unknown outage"));
-                    ts = getDoubleTimeSeries("FLOW_", "branch", chunks[2], outageName);
+                    outageName = Optional.ofNullable(outageNames.get(Integer.parseInt(chunks[3]))).orElseThrow(() -> new PowsyblException(UNKNOWN_OUTAGE));
+                    ts = getDoubleTimeSeries(FLOW_NAME, BRANCH, chunks[2], outageName);
                     ts.insertResult(varNum - offset, Double.parseDouble(chunks[4]));
-                    break;
-
-                case "R4 ": // Marginal costs
+                }
+                case "R4 " -> {
+                    // Marginal costs
                     if ("VAR. MARGINALES".equals(chunks[1])) {
                         continue; // header
                     }
-                    int outageId = Integer.parseInt(chunks[3]);
+                    outageId = Integer.parseInt(chunks[3]);
                     if (outageId == 0) {
-                        ts = getDoubleTimeSeries("MV_", "branch", chunks[2]);
+                        ts = getDoubleTimeSeries("MV_", BRANCH, chunks[2]);
                     } else {
-                        outageName = Optional.ofNullable(outageNames.get(outageId)).orElseThrow(() -> new PowsyblException("Unknown outage"));
-                        ts = getDoubleTimeSeries("MV_", "branch", chunks[2], outageName);
+                        outageName = Optional.ofNullable(outageNames.get(outageId)).orElseThrow(() -> new PowsyblException(UNKNOWN_OUTAGE));
+                        ts = getDoubleTimeSeries("MV_", BRANCH, chunks[2], outageName);
                     }
                     ts.insertResult(varNum - offset, Double.parseDouble(chunks[4]));
-                    break;
-
-                case "R4B ": // Detailed marginal costs
+                }
+                case "R4B " -> {
+                    // Detailed marginal costs
                     if ("VAR. MARGINALES".equals(chunks[1])) {
                         continue; // header
                     }
 
                     outageId = Integer.parseInt(chunks[3]);
-                    outageName = outageId == 0 ? null : Optional.ofNullable(outageNames.get(outageId)).orElseThrow(() -> new PowsyblException("Unknown outage"));
+                    outageName = outageId == 0 ? null : Optional.ofNullable(outageNames.get(outageId)).orElseThrow(() -> new PowsyblException(UNKNOWN_OUTAGE));
                     ts = getDetailedMVTimeSeries("MV_POW", chunks[2], chunks[5], outageName);
                     ts.insertResult(varNum - offset, Double.parseDouble(chunks[6]));
                     ts = getDetailedMVTimeSeries("MV_COST", chunks[2], chunks[5], outageName);
                     ts.insertResult(varNum - offset, Double.parseDouble(chunks[7]));
-                    break;
-
-                case "R5 ": // PST Basecase
+                }
+                case "R5 " -> {
+                    // PST Basecase
                     if ("PAR TD".equals(chunks[1])) {
                         continue; // header
                     }
@@ -392,20 +394,20 @@ public class MetrixOutputData {
                     ts.insertResult(varNum - offset, Double.parseDouble(chunks[3]));
                     ts = getDoubleTimeSeries(PST_TAP_NAME, PST_TYPE, chunks[2]);
                     ts.insertResult(varNum - offset, Integer.parseInt(chunks[4]));
-                    break;
-
-                case "R5B ": // PST Curative
+                }
+                case "R5B " -> {
+                    // PST Curative
                     if (INCIDENT.equals(chunks[1])) {
                         continue; // header
                     }
-                    outageName = Optional.ofNullable(outageNames.get(Integer.parseInt(chunks[1]))).orElseThrow(() -> new PowsyblException("Unknown outage"));
+                    outageName = Optional.ofNullable(outageNames.get(Integer.parseInt(chunks[1]))).orElseThrow(() -> new PowsyblException(UNKNOWN_OUTAGE));
                     ts = getDoubleTimeSeries(PST_CUR_NAME, PST_TYPE, chunks[2], outageName);
                     ts.insertResult(varNum - offset, Double.parseDouble(chunks[3]));
                     ts = getDoubleTimeSeries(PST_CUR_TAP_NAME, PST_TYPE, chunks[2], outageName);
                     ts.insertResult(varNum - offset, Integer.parseInt(chunks[4]));
-                    break;
-
-                case "R6 ": // HVDC Basecase
+                }
+                case "R6 " -> {
+                    // HVDC Basecase
                     if (" PAR LCC".equals(chunks[1])) {
                         continue; // header
                     }
@@ -416,57 +418,56 @@ public class MetrixOutputData {
                         ts = getDoubleTimeSeries("MV_", HVDC_TYPE, chunks[2]);
                         ts.insertResult(varNum - offset, Double.parseDouble(chunks[4]));
                     }
-                    break;
-
-                case "R6B ": // HVDC Curative
+                }
+                case "R6B " -> {
+                    // HVDC Curative
                     if (INCIDENT.equals(chunks[1])) {
                         continue; // header
                     }
-                    outageName = Optional.ofNullable(outageNames.get(Integer.parseInt(chunks[1]))).orElseThrow(() -> new PowsyblException("Unknown outage"));
+                    outageName = Optional.ofNullable(outageNames.get(Integer.parseInt(chunks[1]))).orElseThrow(() -> new PowsyblException(UNKNOWN_OUTAGE));
                     ts = getDoubleTimeSeries("HVDC_CUR_", HVDC_TYPE, chunks[2], outageName);
                     ts.insertResult(varNum - offset, Double.parseDouble(chunks[3]));
-
-                    break;
-
-                case "R7 ": // Redispatching by generator types
+                }
+                case "R7 " -> {
+                    // Redispatching by generator types
                     if ("PAR FILIERE".equals(chunks[1])) {
                         continue; // header
                     }
                     if (!EMPTY_STRING.equals(chunks[3])) {
-                        ts = getDoubleTimeSeries(GEN_VOL_DOWN, "generator-type", chunks[2]);
+                        ts = getDoubleTimeSeries(GEN_VOL_DOWN, GEN_TYPE, chunks[2]);
                         ts.insertResult(varNum - offset, Double.parseDouble(chunks[3]));
                     }
                     if (!EMPTY_STRING.equals(chunks[4])) {
-                        ts = getDoubleTimeSeries(GEN_VOL_UP, "generator-type", chunks[2]);
+                        ts = getDoubleTimeSeries(GEN_VOL_UP, GEN_TYPE, chunks[2]);
                         ts.insertResult(varNum - offset, Double.parseDouble(chunks[4]));
                     }
                     if (!EMPTY_STRING.equals(chunks[5])) {
-                        ts = getDoubleTimeSeries("GEN_CUR_VOL_DOWN_", "generator-type", chunks[2]);
+                        ts = getDoubleTimeSeries("GEN_CUR_VOL_DOWN_", GEN_TYPE, chunks[2]);
                         ts.insertResult(varNum - offset, Double.parseDouble(chunks[5]));
                     }
                     if (!EMPTY_STRING.equals(chunks[6])) {
-                        ts = getDoubleTimeSeries("GEN_CUR_VOL_UP_", "generator-type", chunks[2]);
+                        ts = getDoubleTimeSeries("GEN_CUR_VOL_UP_", GEN_TYPE, chunks[2]);
                         ts.insertResult(varNum - offset, Double.parseDouble(chunks[6]));
                     }
-                    break;
-
-                case "R8 ": // Losses
+                }
+                case "R8 " -> {
+                    // Losses
                     if ("PERTES".equals(chunks[1])) {
                         continue; // header
                     }
                     ts = getDoubleTimeSeries(LOSSES);
                     ts.insertResult(varNum - offset, Double.parseDouble(chunks[2]));
-                    break;
-
-                case "R8B ": // Pertes
+                }
+                case "R8B " -> {
+                    // Pertes
                     if ("PERTES".equals(chunks[1])) {
                         continue; // header
                     }
                     ts = getDoubleTimeSeries(LOSSES_BY_COUNTRY, "losses", chunks[2]);
                     ts.insertResult(varNum - offset, Double.parseDouble(chunks[3]));
-                    break;
-
-                case "R9 ": // Fonction objectif de l'optimisation
+                }
+                case "R9 " -> {
+                    // Fonction objectif de l'optimisation
                     if ("FCT OBJECTIF".equals(chunks[1])) {
                         continue; // header
                     }
@@ -489,19 +490,16 @@ public class MetrixOutputData {
                         ts = getDoubleTimeSeries("LOAD_CUR_COST");
                         ts.insertResult(varNum - offset, Double.parseDouble(chunks[7]));
                     }
-                    break;
-
-                case "R10": // Topological remedial actions
+                }
+                case "R10" -> {
+                    // Topological remedial actions
                     if (INCIDENT.equals(chunks[1])) {
                         continue; // header
                     }
                     sts = getStringTimeSeries("TOPOLOGY_", CONTINGENCY_TYPE, chunks[2]);
                     sts.insertResult(varNum - offset, chunks[4]);
-                    break;
-
-                default:
-                    LOGGER.error("Unexpected content for variant {} ({})", varNum, line);
-                    break;
+                }
+                default -> LOGGER.error("Unexpected content for variant {} ({})", varNum, line);
             }
         }
         if (empty) {
@@ -533,26 +531,17 @@ public class MetrixOutputData {
         if (type.equals(PST_TYPE)) {
             if (preventiveTimeSeriesName.startsWith(PST_TAP_NAME)) {
                 // PST_TAP_ <-> PST_CUR_TAP_
-                if (!timeSeriesName.startsWith(PST_CUR_TAP_NAME)) {
-                    return false;
-                }
+                return timeSeriesName.startsWith(PST_CUR_TAP_NAME);
             } else if (preventiveTimeSeriesName.startsWith(PST_NAME)) {
                 // PST_  <-> PST_CUR_
-                if (timeSeriesName.startsWith(PST_CUR_TAP_NAME) || !timeSeriesName.startsWith(PST_CUR_NAME)) {
-                    return false;
-                }
+                return !timeSeriesName.startsWith(PST_CUR_TAP_NAME) && timeSeriesName.startsWith(PST_CUR_NAME);
             }
         }
         return true;
     }
 
     public static boolean isPreventiveTimeSeries(Map<String, String> tags) {
-        if (tags.containsKey(HVDC_TYPE) || tags.containsKey(PST_TYPE)) {
-            if (tags.containsKey(CONTINGENCY_TYPE) && tags.get(CONTINGENCY_TYPE).equals(BASECASE_TYPE)) {
-                return true;
-            }
-        }
-        return false;
+        return (tags.containsKey(HVDC_TYPE) || tags.containsKey(PST_TYPE)) && tags.containsKey(CONTINGENCY_TYPE) && tags.get(CONTINGENCY_TYPE).equals(BASECASE_TYPE);
     }
 
     public static String getId(Map<String, String> tags) {
