@@ -39,15 +39,15 @@ public class InMemoryTimeSeriesStore implements ReadOnlyTimeSeriesStore {
 
     private Stream<String> getTimeSeriesNames() {
         return Stream.concat(
-                stringTimeSeries.keySet().stream(),
-                doubleTimeSeries.keySet().stream()
+            stringTimeSeries.keySet().stream(),
+            doubleTimeSeries.keySet().stream()
         );
     }
 
     @Override
     public Optional<TimeSeriesMetadata> getTimeSeriesMetadata(String timeSeriesName) {
         List<TimeSeriesMetadata> timeSeriesMetadata = getTimeSeriesMetadata(Collections.singleton(timeSeriesName));
-        if (timeSeriesMetadata.size() > 0) {
+        if (!timeSeriesMetadata.isEmpty()) {
             return Optional.of(timeSeriesMetadata.get(0));
         }
         return Optional.empty();
@@ -56,44 +56,44 @@ public class InMemoryTimeSeriesStore implements ReadOnlyTimeSeriesStore {
     @Override
     public List<TimeSeriesMetadata> getTimeSeriesMetadata(Set<String> timeSeriesNames) {
         Map<String, TimeSeriesMetadata> metadataList = Stream
-                .concat(stringTimeSeries.entrySet().stream(), doubleTimeSeries.entrySet().stream())
-                .filter(timeSeries -> timeSeriesNames.contains(timeSeries.getKey()))
-                .map(Map.Entry::getValue)
-                .filter(timeSeriesVersions -> !timeSeriesVersions.isEmpty())
-                .map(timeSeriesVersions -> timeSeriesVersions.values().stream().findFirst().get())
-                .map(TimeSeries::getMetadata)
-                .collect(Collectors.toMap(TimeSeriesMetadata::getName, Function.identity()));
+            .concat(stringTimeSeries.entrySet().stream(), doubleTimeSeries.entrySet().stream())
+            .filter(timeSeries -> timeSeriesNames.contains(timeSeries.getKey()))
+            .map(Map.Entry::getValue)
+            .filter(timeSeriesVersions -> !timeSeriesVersions.isEmpty())
+            .map(timeSeriesVersions -> timeSeriesVersions.values().stream().findFirst().get())
+            .map(TimeSeries::getMetadata)
+            .collect(Collectors.toMap(TimeSeriesMetadata::getName, Function.identity()));
 
         return timeSeriesNames.stream()
-                .map(metadataList::get)
-                .collect(Collectors.toList());
+            .map(metadataList::get)
+            .toList();
     }
 
     @Override
     public Set<Integer> getTimeSeriesDataVersions() {
         return Stream
-                .concat(stringTimeSeries.values().stream(), doubleTimeSeries.values().stream())
-                .findFirst()
-                .map(Map::keySet)
-                .orElse(Collections.emptySet());
+            .concat(stringTimeSeries.values().stream(), doubleTimeSeries.values().stream())
+            .findFirst()
+            .map(Map::keySet)
+            .orElse(Collections.emptySet());
     }
 
     @Override
     public Set<Integer> getTimeSeriesDataVersions(String timeSeriesName) {
         return Stream
-                .concat(stringTimeSeries.entrySet().stream(), doubleTimeSeries.entrySet().stream())
-                .filter(timeSeries -> timeSeriesName.equals(timeSeries.getKey()))
-                .map(Map.Entry::getValue)
-                .map(Map::keySet)
-                .findFirst()
-                .orElse(Collections.emptySet());
+            .concat(stringTimeSeries.entrySet().stream(), doubleTimeSeries.entrySet().stream())
+            .filter(timeSeries -> timeSeriesName.equals(timeSeries.getKey()))
+            .map(Map.Entry::getValue)
+            .map(Map::keySet)
+            .findFirst()
+            .orElse(Collections.emptySet());
     }
 
     @Override
     public Optional<DoubleTimeSeries> getDoubleTimeSeries(String timeSeriesName, int version) {
-        List<DoubleTimeSeries> doubleTimeSeries = getDoubleTimeSeries(Collections.singleton(timeSeriesName), version);
-        if (doubleTimeSeries.size() > 0) {
-            return Optional.of(doubleTimeSeries.get(0));
+        List<DoubleTimeSeries> localDoubleTimeSeries = getDoubleTimeSeries(Collections.singleton(timeSeriesName), version);
+        if (!localDoubleTimeSeries.isEmpty()) {
+            return Optional.of(localDoubleTimeSeries.get(0));
         }
         return Optional.empty();
     }
@@ -110,9 +110,9 @@ public class InMemoryTimeSeriesStore implements ReadOnlyTimeSeriesStore {
 
     @Override
     public Optional<StringTimeSeries> getStringTimeSeries(String timeSeriesName, int version) {
-        List<StringTimeSeries> stringTimeSeries = getStringTimeSeries(Collections.singleton(timeSeriesName), version);
-        if (stringTimeSeries.size() > 0) {
-            return Optional.of(stringTimeSeries.get(0));
+        List<StringTimeSeries> localStringTimeSeries = getStringTimeSeries(Collections.singleton(timeSeriesName), version);
+        if (!localStringTimeSeries.isEmpty()) {
+            return Optional.of(localStringTimeSeries.get(0));
         }
         return Optional.empty();
     }
@@ -124,12 +124,12 @@ public class InMemoryTimeSeriesStore implements ReadOnlyTimeSeriesStore {
 
     private <T extends TimeSeries> List<T> getTimeSeries(Map<String, Map<Integer, TimeSeries>> timeSeriesList, Class<T> timeSeriesTypeClass, Set<String> timeSeriesNames, int version) {
         return timeSeriesList.entrySet().stream()
-                .filter(timeSeries -> timeSeriesNames.contains(timeSeries.getKey()))
-                .map(Map.Entry::getValue)
-                .map(timeSeriesVersions -> timeSeriesVersions.get(version))
-                .filter(Objects::nonNull)
-                .map(timeSeriesTypeClass::cast)
-                .collect(Collectors.toList());
+            .filter(timeSeries -> timeSeriesNames.contains(timeSeries.getKey()))
+            .map(Map.Entry::getValue)
+            .map(timeSeriesVersions -> timeSeriesVersions.get(version))
+            .filter(Objects::nonNull)
+            .map(timeSeriesTypeClass::cast)
+            .toList();
     }
 
     @Override
@@ -145,18 +145,18 @@ public class InMemoryTimeSeriesStore implements ReadOnlyTimeSeriesStore {
     public void importTimeSeries(BufferedReader reader) {
         Map<Integer, List<TimeSeries>> timeSeries = TimeSeries.parseCsv(reader, new TimeSeriesCsvConfig());
         HashMap<TimeSeriesDataType, HashMap<String, Map<Integer, TimeSeries>>> tsByType = timeSeries.entrySet().stream()
-                .flatMap(tsVersionEntry ->
-                        tsVersionEntry.getValue().stream().map(tsVersion -> Pair.of(tsVersion, tsVersionEntry.getKey()))
-                )
-                .collect(Collectors.groupingBy(
-                    tsVersion -> tsVersion.getKey().getMetadata().getDataType(),
+            .flatMap(tsVersionEntry ->
+                tsVersionEntry.getValue().stream().map(tsVersion -> Pair.of(tsVersion, tsVersionEntry.getKey()))
+            )
+            .collect(Collectors.groupingBy(
+                tsVersion -> tsVersion.getKey().getMetadata().getDataType(),
+                HashMap::new,
+                Collectors.groupingBy(
+                    tsVersion -> tsVersion.getKey().getMetadata().getName(),
                     HashMap::new,
-                    Collectors.groupingBy(
-                        tsVersion -> tsVersion.getKey().getMetadata().getName(),
-                        HashMap::new,
-                        Collectors.toMap(Pair::getValue, Pair::getKey)
-                    )
-                ));
+                    Collectors.toMap(Pair::getValue, Pair::getKey)
+                )
+            ));
 
         HashMap<String, Map<Integer, TimeSeries>> importedDoubleTimeseries = tsByType.get(TimeSeriesDataType.DOUBLE);
         if (importedDoubleTimeseries != null) {
